# tg-notify-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs  main.rs
