[package]
name = "tg_notify"
version = "1.1.1"
edition = "2024"
description = "Lightweight fire-and-forget Telegram bot notifications for any Rust codebase."
license = "MIT"
repository = "https://github.com/ModemNakata/tg-notify-rs"
keywords = ["telegram", "notification", "bot"]

[dependencies]
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "tg_notify"
path = "src/lib.rs"
